# gigaservices

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile.builder  Makefile  README.md  buf.yaml  go.work  go.work.sum
.devcontainer/: Dockerfile
.github/workflows/: go.yml  golang-ci.yml  python-ci.yml
apps/api/: go.mod  go.sum
apps/auth/: .gitignore  Makefile  buf.gen.yaml  package.json  pyproject.toml
apps/auth/config/: kita-authservice.yaml
apps/auth/proto/: auth.service.proto  auth_service.proto  health.proto
apps/auth/proto/health/v1/: health.proto
apps/auth/src/: __main__.py  config.py  constants.py  crawler.py  server.py  types.py
apps/auth/src/cache/: __init__.py  redis.py
apps/auth/src/cli/: __init__.py
apps/auth/src/cli/commands/: reset_database_command.py  start_server_command.py  test_grpc_client_command.py
apps/auth/src/database/: __init__.py  database.py  postgres.py
apps/auth/src/models/: __init__.py  event.py  log.py
apps/auth/src/proto/: auth_service_pb2.py  auth_service_pb2_grpc.py  health_pb2.py  health_pb2_grpc.py
apps/auth/src/proto/health/v1/: health_pb2.py  health_pb2_grpc.py
apps/auth/src/services/: __init__.py  auth_service.py  health_service.py  service.py
apps/auth/src/services/grpc/health_service/: check.py  health.py
apps/auth/src/services/health/: check.py
apps/auth/src/services/health_service/: check.py
apps/auth/src/utils/: deadline.py  wrapper.py
apps/currency/: package.json
apps/email/: Dockerfile  (+4 more)
builder/: Dockerfile
deployment/: cluster.tf  variables.tf
tools/: go.mod  go.sum
(+83 files in other folders)
